Update github pages website

--- a/archive.html
+++ b/archive.html
@@ -10,7 +10,7 @@
     <link rel="alternate" href="/atom.xml" type="application/atom+xml">
     <link rel="stylesheet" href="/style.css" type="text/css">
 		<link rel="icon" type="image/ico" href="/favicon.png" />
-    <title>Joshulties Games | A blog page for game development</title>
+    <title>Archive | A blog page for game development</title>
   </head>
 
   <body>
@@ -64,8 +64,6 @@
   </article>
 
 
-
-<p><a href="/archive.html">all articles...</a></p>
 
 
         </main>
